// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addOrder ask 1`] = `
Array [
  Array [
    "{\\"method\\":\\"add\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"code1|code2\\",\\"orderHash\\":\\"orderHash\\",\\"order\\":\\"signedOrder\\"}",
  ],
]
`;

exports[`addOrder ask 2`] = `
Array [
  Array [
    456,
    123,
    Object {},
    false,
  ],
]
`;

exports[`addOrder ask 3`] = `
Array [
  Array [
    "code1|code2",
    "account",
    "code1address",
    "code2address",
    456,
    123,
    1234568,
  ],
]
`;

exports[`addOrder bid 1`] = `
Array [
  Array [
    "{\\"method\\":\\"add\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"code1|code2\\",\\"orderHash\\":\\"orderHash\\",\\"order\\":\\"signedOrder\\"}",
  ],
]
`;

exports[`addOrder bid 2`] = `
Array [
  Array [
    456,
    123,
    Object {},
    true,
  ],
]
`;

exports[`addOrder bid 3`] = `
Array [
  Array [
    "code1|code2",
    "account",
    "code2address",
    "code1address",
    456,
    123,
    1234568,
  ],
]
`;

exports[`addOrder invalid amount 1`] = `[Error: invalid amount]`;

exports[`addOrder invalid pair 1`] = `[Error: invalid pair]`;

exports[`addOrder missing token 1`] = `[Error: invalid pair]`;

exports[`connectToRelayer 1`] = `
Array [
  Array [
    "wss://relayer.dev.israfel.info:8080",
  ],
]
`;

exports[`connectToRelayer 2`] = `
Array [
  Array [
    "message data",
  ],
]
`;

exports[`deleteOrder 1`] = `
Array [
  Array [
    "{\\"method\\":\\"terminate\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"pair\\",\\"orderHashes\\":[\\"orderHash\\"],\\"signature\\":\\"signature\\"}",
  ],
]
`;

exports[`handleMessage info 1`] = `
Array [
  Array [
    "tokens",
  ],
]
`;

exports[`handleMessage info 2`] = `
Array [
  Array [
    "tokens",
    "status",
    "acceptedPrices",
    "exchangePrices",
  ],
]
`;

exports[`handleMessage orderBooks 1`] = `
Array [
  Array [
    Object {
      "channel": "orderBooks",
    },
  ],
]
`;

exports[`handleMessage orders 1`] = `
Array [
  Array [
    Object {
      "channel": "orders",
    },
  ],
]
`;

exports[`handleMessage trades 1`] = `
Array [
  Array [
    Object {
      "channel": "trades",
    },
  ],
]
`;

exports[`handleOrderBookResponse not ok 1`] = `
Array [
  Array [
    "any",
    "pair",
    "status",
  ],
]
`;

exports[`handleOrderBookResponse snapshot newer than pending updates 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 124,
    },
  ],
]
`;

exports[`handleOrderBookResponse snapshot no pending updates 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 122,
    },
  ],
]
`;

exports[`handleOrderBookResponse snapshot older than pending updates 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123,
    },
  ],
]
`;

exports[`handleOrderBookResponse snapshot older than pending updates but has gap 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123,
    },
  ],
]
`;

exports[`handleOrderBookResponse snapshot older than pending updates but has gap 2`] = `
Array [
  Object {
    "pair": "pair",
    "prevVersion": 124,
    "updates": Array [],
    "version": 125,
  },
]
`;

exports[`handleOrderBookResponse update after snapshot 1`] = `
Array [
  Array [
    Object {
      "asks": Array [],
      "bids": Array [],
      "pair": "pair",
      "version": 123,
    },
  ],
]
`;

exports[`handleOrderBookResponse update after snapshot has gap 1`] = `
Array [
  Object {
    "pair": "pair",
    "prevVersion": 123,
    "updates": Array [],
    "version": 124,
  },
]
`;

exports[`handleOrderBookResponse update before snapshot 1`] = `
Object {
  "pair": Array [
    Object {
      "pair": "pair",
      "prevVersion": 122,
      "updates": Array [],
      "version": 123,
    },
  ],
}
`;

exports[`handleOrderResponse history 1`] = `
Array [
  Array [
    "orderHistory",
  ],
]
`;

exports[`handleOrderResponse not ok 1`] = `
Array [
  Array [
    "method",
    "0xOrderHash",
    "status",
  ],
]
`;

exports[`handleOrderResponse ok 1`] = `
Array [
  Array [
    "userOrder",
  ],
]
`;

exports[`handleTradeResponse not ok 1`] = `
Array [
  Array [
    "method",
    "pair",
    "status",
  ],
]
`;

exports[`handleTradeResponse ok 1`] = `
Array [
  Array [
    "pair",
    Array [
      Object {
        "feeAsset": "test",
        "maker": Object {
          "amount": 123,
          "fee": 123,
          "orderHash": "test",
          "price": 123,
        },
        "pair": "test",
        "taker": Object {
          "address": "test",
          "amount": 123,
          "fee": 123,
          "orderHash": "test",
          "price": 123,
          "side": "test",
        },
        "timestamp": 123,
        "transactionHash": "test",
      },
    ],
  ],
]
`;

exports[`reconnect, less than 5 times 1`] = `
Array [
  Array [
    [Function],
    40000,
  ],
]
`;

exports[`reconnect, no ws 1`] = `
Array [
  Array [
    [Function],
    50000,
  ],
]
`;

exports[`subscribeOrderBook existing pair 1`] = `
Array [
  Array [
    "{\\"method\\":\\"subscribe\\",\\"channel\\":\\"orderBooks\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`subscribeOrderBook new pair 1`] = `
Array [
  Array [
    "{\\"method\\":\\"subscribe\\",\\"channel\\":\\"orderBooks\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`subscribeOrderHistory 1`] = `
Array [
  Array [
    "{\\"method\\":\\"subscribe\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"\\",\\"account\\":\\"0x48bacb9266a570d521063ef5dd96e61686dbe788\\"}",
  ],
]
`;

exports[`subscribeTrade 1`] = `
Array [
  Array [
    "{\\"method\\":\\"subscribe\\",\\"channel\\":\\"trades\\",\\"pair\\":\\"WETH|ETH\\"}",
  ],
]
`;

exports[`unsubscribeOrderBook 1`] = `
Array [
  Array [
    "{\\"method\\":\\"unsubscribe\\",\\"channel\\":\\"orderBooks\\",\\"pair\\":\\"pair\\"}",
  ],
]
`;

exports[`unsubscribeOrderHistory 1`] = `
Array [
  Array [
    "{\\"method\\":\\"unsubscribe\\",\\"channel\\":\\"orders\\",\\"pair\\":\\"\\",\\"account\\":\\"account\\"}",
  ],
]
`;

exports[`unsubscribeTrade 1`] = `
Array [
  Array [
    "{\\"method\\":\\"unsubscribe\\",\\"channel\\":\\"trades\\",\\"pair\\":\\"\\"}",
  ],
]
`;
